--- a/app.yaml
+++ b/app.yaml
@@ -5,11 +5,15 @@ beta_settings:
       cloud_sql_instances: "faizandb-218421:asia-south1:faizandb"
 
 handlers:
+
 - url: /(.+\.php)$
   script: \1
 
-- url: /login/style.css
-  static_files: /login/style.css
+- url: /css
+  static_dir: css
+
+- url: /
+  script: index.php
 
 
 
